<resources>
    <string name="app_name">ERS Savings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="status">Status</string>
    <string name="daily_amount">Daily Amount</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="amount">Amount</string>
    <string name="monthly">Monthly</string>
    <string name="start_new_savings">Start New Savings</string>
    <string name="view_savings">View Savings</string>
    <string name="new_savings">New Savings</string>
    <string name="new_investment">New Investment</string>
    <string name="join_ersnetwork">Join ERSNetwork</string>
    <string name="wallet">Wallet</string>
    <string name="savings">Savings</string>
    <string name="investments">Investments</string>
    <string name="payouts">Payouts</string>
    <string name="user">User</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="start">Add</string>
    <string name="start_new_investment">Start New Investment</string>
    <string name="total">Total</string>
    <string name="interest_accrued">Interest Accrued</string>
    <string name="day">Day</string>
    <string name="duration">Duration</string>
    <string name="add_savings">Add Savings</string>
    <string name="customer">Customer</string>
    <string name="add_investment">Add Investment</string>
    <string name="transaction">Transaction</string>
    <string name="interests">Interests</string>
    <string name="marketer">Marketer</string>
    <string name="fund">Fund</string>
    <string name="fund_savings">Fund Savings</string>
    <string name="_2020_09_24">2020-09-24</string>
    <string name="date">Date</string>
    <string name="withdraw_fund">Withdraw Fund</string>
    <string name="add_fund">Add Fund</string>
    <string name="withdraw">Withdraw</string>
    <string name="fund_investment">Fund Investment</string>
    <string name="login_as_customer">Login As Customer</string>
    <string name="login_as_agent">Login As Marketer</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go_to_register">Go to Register</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="investments_target_met">Target Met</string>
    <string name="investments_target_pending">Target Pending</string>
    <string name="investments_target">Target</string>
    <string name="savings_target_pending">Target Pending</string>
    <string name="savings_target_met">Target Met</string>
    <string name="savings_target">Target</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="my_profile">My Profile</string>
    <string name="my_earnings">My Earnings</string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="customer_investments">Customer Investments</string>
    <string name="customer_savings">Customer Savings</string>
    <string name="my_customers">My Customers</string>
    <string name="customers">Customers</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="name_email">Name/Email</string>
    <string name="mobile">Mobile</string>
    <string name="add_customer">Add Customer</string>
    <string name="bank">Bank</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="password">Password</string>
    <string name="view_more">View more</string>
    <string name="view_transactions">View Transactions</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="source">Source</string>
    <string name="transaction_history">Transaction History</string>
    <string name="earning">Earning</string>
    <string name="bonus">Bonus</string>
    <string name="marketer_earnings">Marketer Earnings</string>
    <string name="savings_earnings">Savings Earnings</string>
    <string name="investment_earnings">Investment Earnings</string>
    <string name="upload_image">Upload Image</string>
    <string name="select">Select</string>
    <string name="marketer_registration">Marketer Registration</string>
    <string name="edit">Edit</string>
</resources>
