<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    app:cardElevation="1dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="14dp"
        android:stretchColumns="1">

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/customer"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/customer"
                android:gravity="end" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="#FF909090" />

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/source"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/source"
                android:gravity="end" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="#FF909090" />

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/type"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/type"
                android:gravity="end" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="#FF909090" />

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/amount"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/amount"
                android:gravity="end" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="#FF909090" />

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/earning"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/earning"
                android:gravity="end" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="#FF909090" />

        <TableRow android:paddingVertical="10dp">

            <TextView
                android:text="@string/bonus"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text" />

            <TextView
                android:id="@+id/bonus"
                android:gravity="end" />
        </TableRow>

    </TableLayout>
</androidx.cardview.widget.CardView>