<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/add_saving_root"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkBlue"
            android:text="@string/add_fund"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:textColor="@color/darkBlue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_middle"
            android:inputType="number"
            android:focusable="false"
            android:padding="4dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/darkBlue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_middle"
            android:padding="4dp"
            android:inputType="date"
            android:text="@string/_2020_09_24"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:focusable="false" />
    </LinearLayout>

</LinearLayout>
