<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyLight"
    android:orientation="vertical"
    tools:context="com.johnnyup.erssavingsapp.CustomerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/open_drawer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/greyLight"
            android:onClick="goBack"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/open_drawer"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:text="@string/customers"
            android:textSize="18sp"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:textColor="@color/darkBlue"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_customer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:cornerRadius="10dp"
            android:text="@string/customer"
            android:drawableStart="@drawable/icon_add"
            android:drawablePadding="3dp"
            android:drawableTint="@color/white"
            app:background="@color/darkBlue" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:cardElevation="1dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:stretchColumns="1">

            <TableRow android:paddingVertical="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textAlignment="textStart"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:text="@string/name_email" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:text="@string/username" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:text="@string/mobile" />
            </TableRow>

        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customer_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@color/greyLight" />

</LinearLayout>